Finished lab (successfully outputs all instances)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
 	<h1>Toy Product</h1>
 	<p>Here are some of the details about the product</p>
-	<p id="output"></p>
+	<p id="output1"></p>
+	<p id="output2"></p>
+	<p id="output3"></p>
+
 </body>
 </html>
